
2022-10-18  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (clear_local_codegen_vars): unset additional
	  "current" references, preventing use-after-free
	* codegen.c (output_stmt): set current_statement on start of
	  any statement generation allowing it to be used for context-checks
	* tree.h, parser.y: removed never-used cobc_printer_node

2022-10-17  Simon Sobisch <simonsobisch@gnu.org>

	* tree.h (cb_reference), tree.c (cb_build_reference): added statement
	  allowing every reference to be checked for its context
	* tree.h (cb_reference), parser.y (perform_procedure): dropped flag_decl_ok
	* typeck.c (cb_validate_labels): use ref->statement instead of flag_decl_ok
	* warning.def, typeck.c (cb_validate_labels): new warnings -Wgoto-section
	  (enabled by default) and -Wgoto-different-section (enabled by -Wall)
	* reserved.c: renamed cb_toupper to res_toupper
	* reserved.c (cb_toupper, cb_tolower), cobc.h: new exported functions
	* scanner.l, config.c, cobc.c: prefer cb_toupper and cb_tolower over
	  locale aware toupper/tolower
	* ppparse.y: directly call toupper/tolower without previous islower/isupper

2022-10-15  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.h: new CB_UNSUPPORTED for features not planned to be supported
	  at all (but parsed to not stumble over those)
	* cobc.h [!HAVE_UNISTD_H]: include stdio.h

2022-10-14  Simon Sobisch <simonsobisch@gnu.org>

	* tree.c, tree.h, cobc.h, parser.y, typeck.c, codegen.c: direct setting
	  and compare of new enum cob_statement instead of passing string constants
	  around (and partially checking those with strcmp later)
	* tree.h (cb_statement_name), codegen.c (cb_statement_enum_name), cobc.h,
	  tree.c: pre-initialized tables to translate new enums to string
	  representation and enum name for use in codegen instead of integer/string
	  constants

2022-10-12  Simon Sobisch <simonsobisch@gnu.org>

	* codeoptim.c: further optimizations for COB_GET_NUMDISP*

2022-10-12  Ron Norman <rjn@inglenet.com>
